# RepoAgent

./: .gitignore  Dockerfile  Dockerfile.llmserver  README.md  activate_venv.sh  docker-compose.yaml  pyproject.toml
config/: karma.yaml  languages.yaml  models.yaml
docker/: llmserver-entrypoint.sh
docs/global/: 01_intro.md  02_architecture.md  03_usage.md
docs/modules/: deployment.md  karma.md  language-adapters.md  local-models.md
markdown_docs/repo_agent/: settings.md
repo_agent/chat_with_repo/: json_handler.py
scripts/: generate_readme.py
src/spooky/: __init__.py  cli.py  config_models.py  configuration.py
src/spooky/documentation/: generator.py
src/spooky/karma/: __init__.py  manager.py
src/spooky/llm/: __init__.py  local.py
tests/: test_change_detector.py  test_documentation.py  test_json_handler.py  test_karma.py  test_llm.py
